Bug 1055533 - Implement Element.closest(). r=bz